--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -77,7 +77,20 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Interpolation </h3>
                                 <p class="description">
-                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                
+                                    <ul>
+                                        <br>
+                                    <li> Discussed property of <b>List</b> (e.g., immutability, append,indexing,list to array). Introduced <b>Tuple.</b></li>
+                                    <li> Discussed usefulness of <b>Dictionary</b> (e.g., <em>key-valu pair</em> paradigm of NoSQL database, search by key, involvement of list in dictionary, dictionary of dictionary, I/O data with json).</li>
+                                    <li> Explored <b> loops</b> and <b>conditions</b> (e.g., <em>for loop, while loop, zip, enumerate, break</em>) and iterated over list and dictionary.</li>
+                                    <li> Implemented <b> loops and condition</b> in creating <b>Fern</b>.</li>
+                                </ul>
+                                </p>
+
+                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+
+                            </div>
+                        </div>
                                 </p>
                             </div>
                         </a>
