--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -75,22 +75,18 @@
                         <a href= "" target="_blank" class="timeline">
                             <div class="timeline-icon"><i class="fa fa-book"></i></div>
                             <div class="timeline-content">
-                                <h3 class="title"> Interpolation </h3>
+                                <h3 class="title"> Interpolation & Extrapolation</h3>
                                 <p class="description">
-                                
-                                    <ul>
+                                   <ul>
                                         <br>
-                                    <li> Discussed property of <b>List</b> (e.g., immutability, append,indexing,list to array). Introduced <b>Tuple.</b></li>
-                                    <li> Discussed usefulness of <b>Dictionary</b> (e.g., <em>key-valu pair</em> paradigm of NoSQL database, search by key, involvement of list in dictionary, dictionary of dictionary, I/O data with json).</li>
-                                    <li> Explored <b> loops</b> and <b>conditions</b> (e.g., <em>for loop, while loop, zip, enumerate, break</em>) and iterated over list and dictionary.</li>
-                                    <li> Implemented <b> loops and condition</b> in creating <b>Fern</b>.</li>
-                                </ul>
-                                </p>
+<li> Lagrange interpolation
+<li> Cubic spline interpolations
+<li> Approximation of derivatives
+<li> Richardson extrapolation
+<li> Curve fitting by least squares
+<li> Nonlinear least squares
 
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
-
-                            </div>
-                        </div>
+                             </ul>
                                 </p>
                             </div>
                         </a>
