--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -120,7 +120,7 @@ presentation.
                                     Beamer is a LaTeX class for creating presentations that are held using a projector, but it can also be
 used to create transparency slides. Preparing presentations with beamer is different from preparing them
 with What you see is
-what you get (WYSIWYG)  programs like Microsoft office, OpenOffice’s Impress, Apple’s Keynotes. A beamer
+what you get <b>(WYSIWYG)</b>  programs like Microsoft office, OpenOffice’s Impress, Apple’s Keynotes. A beamer
 presentation is created like any other LaTeX document. The obvious disadvantage of this approach is that you have to know LaTeX in order to use beamer. The advantage is that if you know LaTeX, you can use your knowledge of LaTeX also when creating a presentation, not only when writing papers. In this topic we will discuss about how to prepare our presentaions with equations, tables, figures, citations, footnotes, etc.
 
     <br> <p style="color:blue;">References:
