--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -75,18 +75,17 @@
                         <a href= "" target="_blank" class="timeline">
                             <div class="timeline-icon"><i class="fa fa-book"></i></div>
                             <div class="timeline-content">
-                                <h3 class="title"> Interpolation & Extrapolation</h3>
+                                <h3 class="title"> Interpolation </h3>
                                 <p class="description">
-                                   <ul>
-                                        <br>
-<li> Lagrange interpolation
-<li> Cubic spline interpolations
-<li> Approximation of derivatives
-<li> Richardson extrapolation
-<li> Curve fitting by least squares
-<li> Nonlinear least squares
-
-                             </ul>
+                                <br> <p style="color:blue;">
+                                     <ul>
+  <li>Lagrange interpolation</li>
+</li> Cubic spline interpolations </li>
+</li> Approximation of derivatives </li>
+</li> Richardson extrapolation </li>
+</li> Curve fitting by least squares </li>
+</li> Nonlinear least squares</li>
+ </ul> 
                                 </p>
                             </div>
                         </a>
