--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -79,14 +79,11 @@
                         </a>
 
 
-
-                        <a href= "" target="_blank" class="timeline">
+ <a href = "" target="_blank" class="timeline">
                             <div class="timeline-icon"><i class="fa fa-book"></i></div>
                             <div class="timeline-content">
-                                <h3 class="title"> Interpolation & Extrapolation</h3>
+                                <h3 class="title"> Inerpolation & Extrapolation </h3>
                                 <p class="description">
-                                <br> <p style="color:blue;">
-                                     <ul>
  <li> Lagrange interpolation</li>
 <li> Cubic spline interpolations </li>
 
@@ -95,9 +92,13 @@
 <li> Richardson extrapolation </li>
 <li> Curve fitting by least squares </li>
 <li> Nonlinear least squares</li>
+
                                 </ul>
+
                                 </p>
+
                             </div>
+
                         </a>
 
 
