--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -84,8 +84,9 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Inerpolation & Extrapolation </h3>
                                 <p class="description">
-    An error may be defined as the difference between the measured value and the actual value. For example, if the two operators use the same device or instrument for a measurement, it is not necessary that they may get the similar results. The difference that occurs between both the measurements is referred to as an ERROR.
-    In this topic we will discuss about error calculation in scientific experiment and computation.
+    Extrapolation and interpolation are both used to estimate hypothetical values for a variable based on other observations. Here we will examine the differences between them and their applications.
+
+     <ul>
  <li> Lagrange interpolation</li>
 <li> Cubic spline interpolations </li>
 
