--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -89,12 +89,8 @@
      <ul>
  <li> Lagrange interpolation</li>
 <li> Cubic spline interpolations </li>
-
-<li> Approximation of derivatives </li>
-
 <li> Richardson extrapolation </li>
-<li> Curve fitting by least squares </li>
-<li> Nonlinear least squares</li>
+
 
                                 </ul>
 
@@ -111,7 +107,14 @@
                             <div class="timeline-content">
                                 <h3 class="title">Numerical Differentiation</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                    
+     <ul>
+
+<li> Approximation of derivatives </li>
+<li> Curve fitting by least squares </li>
+<li> Nonlinear least squares</li>
+
+                                </ul>
                                 </p>
                             </div>
                         </a>
@@ -124,7 +127,18 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Numerical Integration </h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus..                                
+
+
+                                       <ul>
+
+<li> Trapezoidal Rule </li>
+<li> Simpson's Rule, </li>
+<li> The simple pendulum,</li>
+<li> Multidimensional numerical integration </li>
+<li> Monte Carlo numerical integration</li>
+
+                                </ul>
+                                   
                                 </p>
                             </div>
                         </a>
