--- a/training/python/index.html
+++ b/training/python/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>ANPA</title>
+        <title>NPS</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/timeline.css" rel="stylesheet">
