--- a/training/python/index.html
+++ b/training/python/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>NPS</title>
+        <!-- Favicon-->
+        <link rel="shortcut icon" href="../../img/n.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/timeline.css" rel="stylesheet">
