--- a/training/python/index.html
+++ b/training/python/index.html
@@ -73,10 +73,10 @@
                                 <p class="description" >
                                     <ul>
                                         <br>
-                                    <li> Discussed property of <b>List</b> (e.g., immutability, append,indexing,list to array). Introduced <b>Tuple.</b></li>
-                                    <li> Discussed usefulness of <b>Dictionary</b> (e.g., <em>key-valu pair</em> paradigm of NoSQL database, search by key, involvement of list in dictionary, dictionary of dictionary, I/O data with json).</li>
-                                    <li> Explored <b> loops</b> and <b>conditions</b> (e.g., <em>for loop, while loop, zip, enumerate, break</em>) and iterated over list and dictionary.</li>
-                                    <li> Implemented <b> loops and condition</b> in creating <b>Fern</b>.</li>
+                                    <li>  Property of <b>List</b> (e.g., immutability, append,indexing,list to array). Introduced <b>Tuple.</b></li>
+                                    <li> Usefulness of <b>Dictionary</b> (e.g., <em>key-valu pair</em> paradigm of NoSQL database, search by key, involvement of list in dictionary, dictionary of dictionary, I/O data with json).</li>
+                                    <li> Exploration of <b> loops</b> and <b>conditions</b> (e.g., <em>for loop, while loop, zip, enumerate, break</em>) and iterated over list and dictionary.</li>
+                                    <li> Implementation of <b> loops and condition</b> in creating <b>Fern</b>.</li>
                                 </ul>
                                 </p>
 
@@ -96,9 +96,9 @@
                                 <p class="description" >
                                     <ul>
                                         <br>
-                                    <li class="text-left"> Demonstrated data encapsulation and functionality in python <b>object</b> created by python class.</li>
-                                    <li class="text-left"> Implemented data and function interaction with sample <b>classes</b> (e.g., Math, Circle, Newton).</li>
-                                    <li class="text-left"> Implemented function and class to create (1) electric potential of <b>lattice of charges</b> (2) <b>random walk</b> in 1D and 2D (3) <b>diffusion</b> in 2D.</li>
+                                    <li class="text-left"> Demonstration of data encapsulation and functionality in python <b>object</b> created by python class.</li>
+                                    <li class="text-left"> Implementation of data and function interaction with sample <b>classes</b> (e.g., Math, Circle, Newton).</li>
+                                    <li class="text-left"> Implementation of function and class to create (1) electric potential of <b>lattice of charges</b> (2) <b>random walk</b> in 1D and 2D (3) <b>diffusion</b> in 2D.</li>
                                 </ul>
                                 </p>
                                 <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
@@ -115,9 +115,9 @@
                                 <p class="description">
                                     <ul>
                                         <br>
-                                    <li> Explored <b> random array,heatmap</b> of array, extraction of <b> subarray</b> and array manupulation (e.g.,<em>reshaping, flattening, concatenation, row sum, column sum</em>).</li>
-                                    <li> Implemented <b> arange</b> and <b> meshgrid</b> techniques for creating <b>contour</b> and <b>3D plots</b>.</li>
-                                    <li> Explored basic functionalities in <b>Algebra</b> (e.g., vector and matrix manipulation), <b>statistics</b> (e.g.,central tendency, probability.</li>
+                                    <li> Exploration of <b> random array,heatmap</b> of array, extraction of <b> subarray</b> and array manupulation (e.g.,<em>reshaping, flattening, concatenation, row sum, column sum</em>).</li>
+                                    <li> Implementation of <b> arange</b> and <b> meshgrid</b> techniques for creating <b>contour</b> and <b>3D plots</b>.</li>
+                                    <li> Exploration of basic functionalities in <b>Algebra</b> (e.g., vector and matrix manipulation), <b>statistics</b> (e.g.,central tendency, probability.</li>
                                 </ul>
                                 </p>
                                 <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
@@ -135,10 +135,10 @@
                                 <p class="description" >
                                     <ul>
                                         <br>
-                                        <li class="text-left">Introduced <b>Dataframe</b> in Pandas and basic data <b>visualization</b>.</li>
-                                        <li class="text-left">Explored the data <b>iteration and indexing</b> in pandas (e.g.,<em>iterrows, loc, iloc</em>)</li>
-                                        <li class="text-left">Performed data exploration with different <b>plottings</b> (e.g.,<em> histogram, pairplot, barplot,factorplot,countplot,jointplot</em>).</li>
-                                        <li class="text-left"> Implemented <b>groupby and lambda</b> function methods to wrangling data in Dataframe.</li>
+                                        <li class="text-left">Introduction of <b>Dataframe</b> in Pandas and basic data <b>visualization</b>.</li>
+                                        <li class="text-left">Exploration of the data <b>iteration and indexing</b> in pandas (e.g.,<em>iterrows, loc, iloc</em>)</li>
+                                        <li class="text-left">Performing data exploration with different <b>plottings</b> (e.g.,<em> histogram, pairplot, barplot,factorplot,countplot,jointplot</em>).</li>
+                                        <li class="text-left"> Implementation of <b>groupby and lambda</b> function methods to wrangling data in Dataframe.</li>
                                     </li>
                                 </p>
                                 <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
@@ -156,10 +156,10 @@
                                 <p class="description">
                                     <ul>
                                         <br>
-                                    <li> Introduced numerical methods in Python with <b>Scipy</b> package (e.g., <em>Integration, differential equations</em>).</li>
-                                    <li> Explored <b> Special Functions</b> and visualized them.</li>
-                                    <li> Explored <b>Optimization</b> (e.g., <em>Gradient descent, Newton's Conjugate Gradient Method</em>).</li>
-                                    <li> Performed <b>Monte Carlo Simulation</b> of lattice system in Condensed Matter Physics (e.g., <em> Ising Model</em>).</li>
+                                    <li> Introduction to numerical methods in Python with <b>Scipy</b> package (e.g., <em>Integration, differential equations</em>).</li>
+                                    <li> Exploration of <b> Special Functions</b> and visualized them.</li>
+                                    <li> Exploration of <b>Optimization</b> (e.g., <em>Gradient descent, Newton's Conjugate Gradient Method</em>).</li>
+                                    <li> Performing <b>Monte Carlo Simulation</b> of lattice system in Condensed Matter Physics (e.g., <em> Ising Model</em>).</li>
                                 </ul>
                                 </p>
                                 <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
