--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<p>
 										Getting Started with Latex, Jupyter Notebook, Github etc for classroom projects.
 									</p>
-									<a href="./training/documentation/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/document.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -197,7 +197,7 @@
 									<p>
 										Introductory courses in Python programming and  data visualization for classroom.
 									</p>
-									<a href= "./training/python/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href= "./training/python.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -211,7 +211,7 @@
 									<p>
 										Projects from syllabus (Textbook oriented). 
 									</p>
-									<a href="./training/classroom/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/classroom.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -225,7 +225,7 @@
 									<p>
 									 Projects from innovative topics (Tech oriented).
 									</p>
-									<a href="./training/advanced/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/advance.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>																								
