--- a/training/advance.html
+++ b/training/advance.html
@@ -4,7 +4,7 @@
         <title>NPS</title>
         <meta charset="utf-8">
         <!-- Favicon-->
-        <link rel="shortcut icon" href="../../img/n.ico">
+        <link rel="shortcut icon" href="../img/n.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/timeline.css" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
