--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -92,7 +92,7 @@
                             <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Inerpolation & Extrapolation </h3>
-                                <p class="description">
+                                <p class="description text-left">
                                     Extrapolation and interpolation are both used to estimate hypothetical values for a variable based on other observations. Here we will examine the differences between them and their applications.
 
                             <ul>
