--- a/training/advance.html
+++ b/training/advance.html
@@ -103,7 +103,7 @@
                                 <p class="description">
                                     <ul>
                                         <br>
-                                    <li> Mojority of the problems in these innovative topics have well organized database and python libraries (e.g., <em> Gene Database, Brain2, TensorFlow, Scikitlearn, networkX, Neo4J </em>)</li>
+                                    <li> Mojority of the problems in these innovative topics have well organized database and python libraries (e.g., <em> Gene Database, Brain2, TensorFlow, Sklearn, networkX, Neo4J </em>)</li>
                                     <li> Problems in Machine Learning are data driven model development, which required a well defined data set. Problems in Neuroscience are based on Numerical method and simulation while from Complex Network are graph data (e.g., from social media, corruption network). </li>
                                     <li> Each Focus group will try to implement Numerical Method, simulation, optimization, machine learning technique in their project whenever possible. Introductory concepts in these topics are delivered in <b>Introductory Python</b> training course as well as additional technique will be delivered during the project.</li>
                                 </ul>
