--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -58,11 +58,12 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER II </span>
+                            <span class="year"> CHAPTER I </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Motion in Central Field </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Motion in central force field, motion in arbitrary
+                                    potential field, equation of orbits, Kepler’s laws of planetary motion 
 
                                     <ul>
 
