Chapter II and III
Updated

--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -82,11 +82,12 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER II </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
+                                <h3 class="title text-left"> Elastic and Inelastic Collision </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Collision of particles, collision in laboratory and
+                                    center of mass systems, cross section, Rutherford scattering 
 
                                     <ul>
 
@@ -105,11 +106,14 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER III </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Elementary Principles </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Constraints, Generalized coordinates, generalized
+                                    displacement, generalized velocity, generalized acceleration, generalized
+                                    momentum, generalized force and generalized potential, D’Alembert’s principle
+                                    and Lagrange’s equations 
 
                                     <ul>
 
