--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -131,11 +131,13 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER IV </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Variational Principles and Lagrange’s Equations </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Calculus of variations:
+                                    Geodesics, Minimum surface of revolution, The brachistochrone problem,       Hamilton’s principle and derivation of Lagrange’s equation, Extension of Hamilton’s
+principle to nonholonomic systems (Method of Lagrange undetermined multipliers), Conservation theorems and symmetry properties, Energy function and the conservation of energy 
 
                                     <ul>
 
