--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -153,7 +153,28 @@ principle to nonholonomic systems (Method of Lagrange undetermined multipliers),
                         
 
                         <!-- Add more blocks here -->
+                        <div class="timeline">
+                            <span class="timeline-icon"></span>
+                            <span class="year"> CHAPTER X </span>
+                            <div class="timeline-content">
+                                <h3 class="title"> Inertial Frames </h3>
+                                <p class="description">
+                                    CMoving co-ordinate system, translating and rotating coordinate
+systems, Coriolis force, Foucault pendulum
 
+                                    <ul>
+
+                                    <li> This is first bullet point </li>
+                                    <li> This is second bullet point </li>
+                                    <li> This is third Bullet point</li>
+
+                                </ul>
+                                </p>
+                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                            </div>
+                        </div>
+
+                        <!-- Add more blocks here -->
 
                     </div>
                 </div>
