--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -155,13 +155,59 @@ principle to nonholonomic systems (Method of Lagrange undetermined multipliers),
                         <!-- Add more blocks here -->
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER V </span>
                             <div class="timeline-content">
                                 <h3 class="title"> Inertial Frames </h3>
                                 <p class="description">
                                     CMoving co-ordinate system, translating and rotating coordinate
 systems, Coriolis force, Foucault pendulum
 
+                                    <ul>
+
+                                    <li> This is first bullet point </li>
+                                    <li> This is second bullet point </li>
+                                    <li> This is third Bullet point</li>
+
+                                </ul>
+                                </p>
+                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                            </div>
+                        </div>
+                          <!-- Add more blocks here -->
+                        <div class="timeline">
+                            <span class="timeline-icon"></span>
+                            <span class="year"> CHAPTER VI </span>
+                            <div class="timeline-content">
+                                <h3 class="title"> Motion of Rigid Bodies </h3>
+                                <p class="description">
+                                    Motion of rigid body, Euler’s theorem, angular
+momentum and kinetic energy, the inertia tensor, Euler’s equation of motion,
+torque free motion, Eulerian angle, symmetrical top
+                                    <ul>
+
+                                    <li> This is first bullet point </li>
+                                    <li> This is second bullet point </li>
+                                    <li> This is third Bullet point</li>
+
+                                </ul>
+                                </p>
+                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                            </div>
+                        </div>
+
+ <!-- Add more blocks here -->
+                        <div class="timeline">
+                            <span class="timeline-icon"></span>
+                            <span class="year"> CHAPTER VII </span>
+                            <div class="timeline-content">
+                                <h3 class="title"> Relativity </h3>
+                                <p class="description">
+                                    Gallilean invariance, inertial frames of reference, Gallilean
+transformations, non-inertial frames and fictitious forces, Michelson-Morley
+experiment, Lorentz transformation, length contraction, time dilation,
+transformation and addition of velocities, variation of mass with velocity, Mass
+energy relation, relation between momentum and energy, transformation
+of energy and momentum.
                                     <ul>
 
                                     <li> This is first bullet point </li>
