--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -66,14 +66,11 @@
 
                                     <ul>
 
-                                    <li> One particle wave function space: vector space, scalar product, linear operator, closure
-relation, discrete and continuous bases</li>
- <li>  State space, Dirac notation: ket and bra vectors, duel space, correspondence between
-ket and bra</li>
+<li> One particle wave function space</li>
+ <li>  State space, Dirac notation</li>
  <li>Projection operator, Hermitian conjugation </li>
-<li> Representation in state space: orthonormalization relation, closure relation, matrix
-representations of kets, Bras, operators, change of representations  </li>
- <li> Eigenvalue equations, observables: definition of an observable, the projectors </li>
+<li> Representation in state space  </li>
+ <li> Eigenvalue equations, observables </li>
  <li> Sets of commuting observables, complete sets of commuting observables </li>
                                     
            
