--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -87,9 +87,9 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER II: Postulates of Quantum Mechanics </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
+                                <h3 class="title text-left"> Postulates of Quantum Mechanics</h3>
                                 <p class="description text-left">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
@@ -110,9 +110,9 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER III: Barriers and Bound States in One Dimension </span>
+                            <span class="year"> CHAPTER 3 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Barriers and Bound States in One Dimension </h3>
                                 <p class="description">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
@@ -132,10 +132,10 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year">  Chapter IV: Spin and Magnetic Moment 
+                            <span class="year">  Chapter 4  
                                      </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Spin and Magnetic Moment </h3>
                                 <p class="description text-left">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
@@ -154,10 +154,10 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year">  Chapter V: Addition of Angular Momenta 
+                            <span class="year">  CHAPTER 5
                                      </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Addition of Angular Momenta </h3>
                                 <p class="description text-left">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
@@ -176,10 +176,10 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year">  Chapter VI: Stationary Perturbation theory
+                            <span class="year">  CHAPTER 6
                                      </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Stationary Perturbation theory</h3>
                                 <p class="description text-left">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
