--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -94,8 +94,18 @@
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
                                     <ul>
+                                  
+<li class="text-left"> Statement of the postulates </li>
 
-                                    <li class="text-left"> This is first bullet point </li>
+<li class="text-left">Physical interpretation </li>
+
+<li class="text-left"> Physical implications of the Schrodinger equation: superposition principle </li>
+
+<li class="text-left"> Conservation of probability </li>
+
+<li class="text-left"> Equation of motion for an observable, principle of first quantization </li>
+
+<li class="text-left"> Ehrenfest theorem </li>
                                     <li class="text-left"> This is second bullet point </li>
                                     <li class="text-left"> This is third Bullet point</li>
 
@@ -117,10 +127,9 @@
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
                                     <ul>
-
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+<li class="text-left"> Double well model of a molecule </li>
+<li class="text-left"> Kronig-Penny model for metals </li>
+<li class="text-left"> Revision of angular momentum in spherical coordinates</li>
 
                                 </ul>
                                 </p>
@@ -141,7 +150,15 @@
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
+                                    <li class="text-left"> Need for matrix representation of spin </li>
+ <li class="text-left"> Pauli spin matrices </li>
+ <li class="text-left"> Spinors and expectation values </li>
+ <li class="text-left"> Pauli operators </li>
+ <li class="text-left"> Magnetic moment of an electron </li>
+ <li class="text-left">Precession of an electron in a magnetic field, magnetic resonance </li>
+ <li class="text-left"> Space inversion </li>
+ <li class="text-left"> Time reversal </li>
+<li class="text-left"> Isospin </li>
                                     <li class="text-left"> This is second bullet point </li>
                                     <li class="text-left"> This is third Bullet point</li>
 
@@ -163,9 +180,11 @@
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+   <li class="text-left"> Addition of two spins </li>
+   <li class="text-left"> Addition of two angular momenta: general method </li>
+   <li class="text-left">Vector operators: Wigner-Eckart theorem </li>
+   <li class="text-left"> Identical particles and symmetry </li>
+                                   
 
                                 </ul>
                                 </p>
@@ -185,9 +204,12 @@
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+<li class="text-left"> Perturbation theory</li>
+<li class="text-left"> Nondegenerate case </li>
+ <li class="text-left"> 6.3 Simple applications
+ <li class="text-left">  Degenerate case, Simple cases of removal of degeneracy</li>
+ <li class="text-left"> Exchange degeneracy </li>
+ <li class="text-left"> Rayleigh Ritz Variation Method </li>
 
                                 </ul>
                                 </p>
