--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -166,9 +166,14 @@
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+<li class ="text-left"> Euler methods </li>
+  <li class ="text-left"> Runge-Kutta Methods </li>
+  <li class ="text-left"> Second order differential equation </li>
+  <li class ="text-left"> Phase space of a simple harmonic oscillator </li>
+  <li class ="text-left"> One-Dimensional Schroedinger equation(example with anharmonic potential) </li>
+  <li class ="text-left"> Laplaces equation </li>
+ <li class ="text-left"> Wave equations and heat equation </li>
+  <li class ="text-left">  Wave equations and heat equation</li>
 
                                 </ul>
                                 </p>
