--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -160,7 +160,7 @@
                             <span class="timeline-icon"></span>
                             <span class="year"> CHAPTER 5 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> System of Homogeneous Linear Equations </h3>
+                                <h3 class="title"> Ordinary & Partial differential equation </h3>
                                 <p class="description">
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
